tests/compile_fail/struct_size_unaligned.stderr
error[E0080]: evaluation panicked: When implementing `ShaderLayout`, struct `SizeUnaligned` size must be equal to its shader size, i.e. `roundUp(AlignOf(S), SizeOf(S)))`
 --> tests/compile_fail/struct_size_unaligned.rs:3:1
  |
3 | / shader_layout! {
4 | |
5 | |     pub struct SizeUnaligned {
6 | |         a4: glam::Vec3,
7 | |     }
8 | | }
  | |_^ evaluation of `_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `shader_layout` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
